<resources>
    <string name="app_name">Women Safety</string>

    <string name="welcome">Welcome</string>
    <string name="nice_to_see_you">Nice to see you</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="women">Women</string>
    <string name="safety">Safety</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_with_otp">Login With OTP</string>
    <string name="create_account">Create Account</string>
    <string name="create">Create\nAccount</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">Select your age</string>
    <string name="enter_your_dob">Pick your DOB</string>
    <string name="code">CO\nDE</string>
    <string name="verification">Verification</string>
    <string name="enter_one_time_password">Enter one time OTP</string>
    <string name="verify_code">Verify Code</string>
</resources>